force-app/main/default/objects/copado__Artifact_Version__c/fields/copado__Artifact__c.field-meta.xml
<CustomField>
    <fullName>copado__Artifact__c</fullName>
    <label>Artifact</label>
    <referenceTo>copado__Artifact__c</referenceTo>
    <relationshipLabel>Artifact Versions</relationshipLabel>
    <relationshipName>Artifact_Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>