force-app/main/default/objects/copado__Artifact_Version__c/fields/copado__Release__c.field-meta.xml
<CustomField>
    <fullName>copado__Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release</label>
    <referenceTo>copado__Release__c</referenceTo>
    <relationshipLabel>Artifact Versions</relationshipLabel>
    <relationshipName>Artifact_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>