force-app/main/default/objects/copado__Artifact_Version__c/fields/copado__Sandbox_Installation_URL__c.field-meta.xml
<CustomField>
    <fullName>copado__Sandbox_Installation_URL__c</fullName>
    <formula>HYPERLINK(&#39;https://test.salesforce.com/packaging/installPackage.apexp?p0=&#39;+copado__Subscriber_Version_Id__c, &#39;https://test.salesforce.com/packaging/installPackage.apexp?p0=&#39;+copado__Subscriber_Version_Id__c, &#39;_blank&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use this URL in order to install this package in a sandbox environment.</inlineHelpText>
    <label>Sandbox Installation URL</label>
    <type>Text</type>
</CustomField>